--- a/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="discussion search">
         <div class="searchbar">
             <i class="fa fa-search" aria-hidden="true"></i>
-            <input type="text" id="search" placeholder="Search..." autocomplete="off" />
+            <input type="text" id="search" placeholder="Search..." />
             <div>
                 <ul id="search_box" style="background-color: rgba(36, 69, 215, 0.849);width:250px;position:absolute;top:150px;left:320px;">
                 </ul>
