--- a/Friendly_Chat/src/Chat.MVC/Views/Shared/_Layout.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Shared/_Layout.cshtml
@@ -14,9 +14,13 @@
           crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
           integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="../assets/css/NotificatioStyle.css">
+    <!--Main Style-->
     <style>
         body {
-            background-color: #F5F5F5;
+            background-color: #83ceec;
+            /*#F5F5F5;*/
         }
 
         .container {
@@ -83,7 +87,8 @@
             width: 90%;
             height: 700px;
             box-shadow: 0px 8px 10px rgba(0,0,0,0.20);
-            overflow: scroll;
+            overflow-y:scroll;
+            overflow-x:hidden;
             background-color: #87a3ec;
             display: inline-block;
         }
@@ -365,6 +370,185 @@
             cursor: pointer;
         }
     </style>
+
+    <!--Notification buttonsa sytle-->
+    <style>
+        .button-37 {
+            background-color: #13aa52;
+            border: 1px solid #13aa52;
+            border-radius: 4px;
+            box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+            box-sizing: border-box;
+            color: #fff;
+            cursor: pointer;
+            font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            outline: none;
+            outline: 0;
+            padding: 10px 25px;
+            text-align: center;
+            transform: translateY(0);
+            transition: transform 150ms, box-shadow 150ms;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+            .button-37:hover {
+                box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+                transform: translateY(-2px);
+            }
+
+        .button-37-1 {
+            background-color: #e62143;
+            border: 1px solid #e62143;
+            border-radius: 4px;
+            box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
+            box-sizing: border-box;
+            color: #fff;
+            cursor: pointer;
+            font-family: "Akzidenz Grotesk BQ Medium", -apple-system, BlinkMacSystemFont, sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            outline: none;
+            outline: 0;
+            padding: 10px 25px;
+            text-align: center;
+            transform: translateY(0);
+            transition: transform 150ms, box-shadow 150ms;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+            .button-37-1:hover {
+                box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
+                transform: translateY(-2px);
+            }
+    </style>
+
+    <!--Profil Style-->
+    <style>
+        .profile-head {
+            transform: translateY(5rem)
+        }
+
+        .cover {
+            background-image: url(https://images.unsplash.com/photo-1530305408560-82d13781b33a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);
+            background-size: cover;
+            background-repeat: no-repeat
+        }
+
+        /*        body {
+                                                            background: #654ea3;
+                                                            background: #5257e4;
+                                                            background: linear-gradient(to right, #83ceec, #904e95);
+                                                            min-height: 100vh;
+                                                            overflow-x: hidden;
+                                                        }*/
+    </style>
+
+    <!--The Model Style-->
+    <style>
+
+        /* The Modal (background) */
+        .modal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 400px; /* Full width */
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+        }
+
+        /* Modal Content (image) */
+        .modal-content {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+        }
+
+        /* Caption of Modal Image */
+        #caption {
+            margin: auto;
+            display: block;
+            width: 80%;
+            max-width: 700px;
+            text-align: center;
+            color: #ccc;
+            padding: 10px 0;
+            height: 150px;
+        }
+
+        /* Add Animation */
+        .modal-content, #caption {
+            -webkit-animation-name: zoom;
+            -webkit-animation-duration: 0.6s;
+            animation-name: zoom;
+            animation-duration: 0.6s;
+        }
+
+        -webkit-keyframes zoom {
+            from
+
+        {
+            -webkit-transform: scale(0)
+        }
+
+        to {
+            -webkit-transform: scale(1)
+        }
+
+        }
+
+        keyframes zoom {
+            from
+
+        {
+            transform: scale(0)
+        }
+
+        to {
+            transform: scale(1)
+        }
+
+        }
+
+        /* The Close Button */
+        .close {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+            .close:hover,
+            .close:focus {
+                color: #bbb;
+                text-decoration: none;
+                cursor: pointer;
+            }
+
+        /* 100% Image Width on Smaller Screens */
+        media only screen and (max-width: 700px) {
+            .modal-content
+
+        {
+            width: 100%;
+        }
+
+        }
+    </style>
+
 </head>
 
 <body>
@@ -392,7 +576,7 @@
                         </li>
                         </a>
 
-                        <a asp-action="Index" asp-controller="Notification" class="navitem item " style="color: inherit; text-decoration:none;">
+                        <a id="notificationLink" asp-action="Index" asp-controller="Notification" class="navitem item " style="color: inherit; text-decoration:none;">
                         <li id="li4">
                             <i class="fa-solid fa-envelope" aria-hidden="true"></i>
                         </li>
@@ -403,16 +587,163 @@
             </div>
         </div>
     </div>
-    <script src="~/assets/js/jquery-3.7.0.min.js"></script>
+
+    <div id="myModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="img01">
+        <div id="caption"></div>
+    </div>
+
+
+    <script src="~/assets/js/jquery-3.7.0.min.js" type="text/javascript"></script>
+
+    <!--The Layout Script-->
     <script>
         $(document).ready(function () {
-            var notification = "@ViewBag.IsNotification";
-                console.log(notification);
+            var notification = "@ViewBag.IsNewNotification";
+            console.log(notification);
             if (notification == "yes") {
                 $("#li4").find("i").removeClass("fa-envelope");
                 $("#li4").find("i").addClass("fa-bell");
             }
+
+            var menu = '@ViewBag.ActiveMenu';
+            $(".navitem").find("li").removeClass("item-active");
+            if (menu == "Home") {
+                $("#li1").addClass("item-active");
+            }
+            if (menu == "Profil") {
+                $("#li2").addClass("item-active");
+            }
+            if (menu == "Follow") {
+                $("#li3").addClass("item-active");
+            }
+            if (menu == "Notification") {
+                $("#li4").addClass("item-active");
+            };
         });
     </script>
+    <!--End Layout Script-->
+    <!--The Notification Script-->
+    <script>
+        $(document).ready(function () {
+            var menu = '@ViewBag.ActiveMenu';
+            if (menu == "Notification") {
+                $.ajax({
+                    url: "/Notification/GetNotifications",
+                    type: "Get",
+                    dataType: "json",
+                    success: function (data) {
+                        var html = '';
+                        if (data != null) {
+                            $.each(data, function (i, val) {
+                                html += '<div class="notification-list notification-list--unread" style="height:90px;width:900px;margin-left:15px;"><div class="notification-list_content"><div class="notification-list_img"><img class="myimg11" onclick="Modal(\'' + val.image + '\')" src="../assets/images/' + val.image + '" alt="user"></div><div class="notification-list_detail"><p style="margin-top:15px; font-size:20px"><b>' + val.fromUser + '</b> sent you a friend request-  ->' + val.date + '</p></div></div><div class="notification-list_feature-img buttons"><button class="btn button-37" onclick="Accept(\'' + val.fromUser + '\',$(this))" role="button">Accept</button><button class="btn button-37-1" onclick="Reject(\'' + val.fromUser + '\',$(this))" role="button">Reject</button></div></div>';
+                            });
+                        }
+                        else {
+                            html += '<img src="../assets/images/nonotification.jpg" alt="user" style="width:300px;margin-left:300px;">';
+                        }
+                        $('#notification_box').empty();
+                        $('#notification_box').append(html);
+                    }
+                });
+            }
+        });
+
+        function Accept(name, el) {
+            el.prop('disabled', true);
+            $.ajax({
+                url: "/Follow/ToAcceptRequest",
+                type: "POST",
+                data: { username: name },
+                success: function () {
+                    el.closest('.notification-list').css('display', 'none');
+                }
+            });
+        }
+
+        function Reject(name, el) {
+            el.prop('disabled', true);
+            $.ajax({
+                url: "/Follow/ToRejectRequest",
+                type: "POST",
+                data: { username: name },
+                success: function () {
+                    el.closest('.notification-list').css('display', 'none');
+                }
+            });
+        }
+
+
+        //The Modal Script------ >
+        var modal = document.getElementById("myModal");
+        var modalImg = document.getElementById("img01");
+        var captionText = document.getElementById("caption");
+        function Modal(image) {
+            modal.style.display = "block";
+            modalImg.src = "../assets/images/" + image;
+        };
+        var span = document.getElementsByClassName("close")[0];
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+        //End Modal Script------ >
+
+
+    </script>
+    <!--End Notification Script-->
+    <!--The Follow Script-->
+    <script>
+        $(document).ready(function () {
+            $("#search").keyup(function () {
+                var username = $("#search").val();
+                if (username.length >= 3) {
+                    $.ajax({
+                        url: "/Follow/SearchByUsername",
+                        type: "GET",
+                        data: { username: username },
+                        dataType: "json",
+                        success: function (data) {
+                            var html = "";
+                            if (data.length != 0) {
+                                $.each(data, function (i, val) {
+                                    html += '<div class="card"><div class="card-body"style="display:-webkit-box;display:-ms-flexbox;display:flex;"><img src="../assets/images/' + val.image + '"alt="user"style="width:40px;height:40px;"/><p style="margin-left:20px;margin-top:5px;font-size:20px;font-weight:bold;">' + val.userName + '</p><button class="btn btn-success"  onclick="send(\'' + val.userName + '\',$(this))" >Send follow request</button></div></div>';
+                                });
+                            }
+                            else {
+
+                                html += '<div class="card"><div class="card-body"style="display:-webkit-box;display:-ms-flexbox;display:flex;"><p>Heç bir netice yoxdur</p>';
+                            }
+                            $('#search_box').empty();
+                            $('#search_box').append(html);
+                        }
+                    });
+                }
+            });
+        });
+        function send(name, el) {
+            el.prop('disabled', true);
+            $.ajax({
+                url: "/Follow/SendFollowRequest",
+                type: "POST",
+                data: { username: name }
+            });
+        }
+    </script>
+    <!--End Follow Script-->
+    <!--The Profile Script-->
+    <script>
+        $("#editProfil, #closeform").click(function () {
+            $("#editform").toggle();
+        });
+        $("#changeinfo").click(function(){
+            $("#editform input").prop("disabled", false);
+        });
+        $("#Followers, #Following").click(function(){
+            $("#followList").toggle();
+        });
+    </script>
+    <!--End Profile Script-->
+
 </body>
 </html>
