--- a/Friendly_Chat/src/Chat.MVC/wwwroot/assets/css/NotificatioStyle.css
+++ b/Friendly_Chat/src/Chat.MVC/wwwroot/assets/css/NotificatioStyle.css
@@ -1,6 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap);body {
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap);
+body {
   font-family: "Roboto", sans-serif;
-  background: #EFF1F3;
   min-height: 100vh;
   position: relative;
 }
