created and update files

--- a/Friendly_Chat/src/Chat.MVC/Views/Follow/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Follow/Index.cshtml
@@ -4,14 +4,10 @@
 }
 
 <selection class="discussionsN">
-    <h1>Follow</h1>
+    <h2 class="m-b-50 heading-line" style="margin-left:350px; margin-top:20px;">Follow <i class="fa-solid fa-user-plus fa-beat fa-2xs"></i></h2>
     <div class="input-group rounded">
         <input id="search" type="search" class="form-control rounded col-7" placeholder="Search user name" aria-label="Search" aria-describedby="search-addon" style="margin-left:200px; height:50px;" />
     </div>
     <div id="search_box" style="margin-left:200px; margin-top:15px; width:590px;">
     </div>
 </selection>
-
-
-
-
