--- a/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <section class="discussions">
 
-    <div class="discussion search">
+@*  <div class="discussion search">
         <div class="searchbar">
             <i class="fa fa-search" aria-hidden="true"></i>
             <input type="text" id="search" placeholder="Search..." />
@@ -18,9 +18,9 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div>*@
 
-    <div class="discussion message-active">
+@*    <div class="discussion message-active">
         <div class="photo"
              style="background-image: url(https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
             <div class="online"></div>
@@ -30,9 +30,9 @@
             <p class="message">9 pm at the bar if possible 😳</p>
         </div>
         <div class="timer">12 sec</div>
-    </div>
+    </div>*@
 
-    <div class="discussion">
+@*    <div class="discussion">
         <div class="photo"
              style="background-image: url(https://i.pinimg.com/originals/a9/26/52/a926525d966c9479c18d3b4f8e64b434.jpg);">
             <div class="online"></div>
@@ -42,9 +42,9 @@
             <p class="message">Let's meet for a coffee or something today ?</p>
         </div>
         <div class="timer">3 min</div>
-    </div>
+    </div>*@
 
-    <div class="discussion">
+@*    <div class="discussion">
         <div class="photo"
              style="background-image: url(https://images.unsplash.com/photo-1553514029-1318c9127859?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80);">
         </div>
@@ -53,8 +53,7 @@
             <p class="message">What the f**k is going on ?</p>
         </div>
         <div class="timer">1 day</div>
-    </div>
-
+    </div>*@
 </section>
 <section class="chat">
     <div class="header-chat">
