--- a/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
 <script src="~/assets/js/jquery-3.7.0.min.js"></script>
 
 
-<section class="discussions">
+<section  class="discussions" style="overflow-y:scroll;overflow-x:hidden;">
 
-@*  <div class="discussion search">
+  <div class="discussion search">
         <div class="searchbar">
             <i class="fa fa-search" aria-hidden="true"></i>
             <input type="text" id="search" placeholder="Search..." />
@@ -18,9 +18,11 @@
                 </ul>
             </div>
         </div>
-    </div>*@
+    </div>
+    <div id="ChatBox">
 
-@*    <div class="discussion message-active">
+    </div>
+@*    <div class="discussion  message-active">
         <div class="photo"
              style="background-image: url(https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
             <div class="online"></div>
@@ -30,9 +32,9 @@
             <p class="message">9 pm at the bar if possible 😳</p>
         </div>
         <div class="timer">12 sec</div>
-    </div>*@
+    </div>
 
-@*    <div class="discussion">
+   <div class="discussion">
         <div class="photo"
              style="background-image: url(https://i.pinimg.com/originals/a9/26/52/a926525d966c9479c18d3b4f8e64b434.jpg);">
             <div class="online"></div>
@@ -42,9 +44,9 @@
             <p class="message">Let's meet for a coffee or something today ?</p>
         </div>
         <div class="timer">3 min</div>
-    </div>*@
+    </div>
 
-@*    <div class="discussion">
+    <div class="discussion">
         <div class="photo"
              style="background-image: url(https://images.unsplash.com/photo-1553514029-1318c9127859?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80);">
         </div>
@@ -55,75 +57,56 @@
         <div class="timer">1 day</div>
     </div>*@
 </section>
-<section class="chat">
-    <div class="header-chat">
-        <i class="icon fa fa-user-o" aria-hidden="true"></i>
-        <p class="name">Megan Leib</p>
+
+
+<section class="chat" >
+
+    <div class="chat-icon" style="margin-top:200px;margin-left:150px;">
+        <i class="far fa-comments" style="font-size:300px;"></i>
     </div>
-    <div class="messages-chat">
-        <div class="message">
-            <div class="photo"
-                 style="background-image: url(https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
-                <div class="online"></div>
-            </div>
-            <p class="text"> Hi, how are you ? </p>
+    <div class="header-chat" style="display:none;height:70px;">
+        <img src="../assets/images/default.png" style="width: 55px; height: 55px" class="rounded-circle" />
+        <p class="name"><b id="header-name"></b></p>
+    </div>
+    
+    <div class="messages-chat" style="overflow-y:scroll;overflow-x:hidden;height:500px;display:none;">
+        @*<div class="message">
+            <p class="text"> Salam </p>
         </div>
-        <div class="message text-only">
-            <p class="text"> What are you doing tonight ? Want to go take a drink ?</p>
+       <div class="message">
+            <p class="text"> What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?What are you doing tonight ? Want to go take a drink ?</p>
         </div>
         <p class="time"> 14h58</p>
-        <div class="message text-only">
+        <div class="message">
             <div class="response">
                 <p class="text"> Hey Megan ! It's been a while 😃</p>
             </div>
         </div>
-        <div class="message text-only">
+        <div class="message">
+            <div class="response">
+                <p class="text"> Hey Megan ! It's been a while 😃</p>
+            </div>
+        </div>
+        <div class="message">
             <div class="response">
                 <p class="text"> When can we meet ?</p>
             </div>
         </div>
         <p class="response-time time"> 15h04</p>
         <div class="message">
-            <div class="photo"
-                 style="background-image: url(https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);">
-                <div class="online"></div>
-            </div>
             <p class="text"> 9 pm at the bar if possible 😳</p>
         </div>
         <p class="time"> 15h09</p>
+
+
+        <div class="message">
+            <p class="text"> What are you doing tonight ? Want to go take a drink ?</p>
+        </div>*@
     </div>
-    <div class="footer-chat" style="width: 750px;">
-        <i class="icon fa fa-smile-o clickable" style="font-size:25pt;" aria-hidden="true"></i>
-        <input type="text" class="write-message" placeholder="Type your message here"/>
-        <i class="icon send fa fa-paper-plane-o clickable" aria-hidden="true"></i>
+    <div class="footer-chat" style="width: 650px; position:absolute; margin-bottom:30px;display:none">
+        @*<i class="icon fa fa-smile-o clickable" style="font-size:25pt;" aria-hidden="true"></i>*@
+        <input data-toUser="myval" type="text" class="write-message" placeholder="Type your message here"/>
+        <i id="sendMessage" class="icon send fa fa-paper-plane-o clickable" aria-hidden="true"></i>
     </div>
 </section>
-
-<script>
-    //$(document).ready(function () {
-    //    $("#search").keyup(function () {
-    //        var username = $("#search").val();
-    //        if (username.length >= 3) {
-    //            $.ajax({
-    //                url: "/Home/SearchByUsername",
-    //                type: "GET",
-    //                data: { username: username },
-    //                dataType: "json",
-    //                success: function (data) {
-    //                    var html = "";
-
-    //                    $.each(data, function (i, val) {
-    //                        html += `
-    //                                              <li>`+ val.userName + `</li>
-    //                                        `;
-    //                    })
-    //                    $('#search_box').empty();
-    //                    $('#search_box').append(html);
-    //                }
-    //            })
-    //        }
-    //    })
-    //});
-
-</script>
 
