--- a/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Home/Index.cshtml
@@ -105,8 +105,8 @@
     </div>
     <div class="footer-chat" style="width: 650px; position:absolute; margin-bottom:30px;display:none">
         @*<i class="icon fa fa-smile-o clickable" style="font-size:25pt;" aria-hidden="true"></i>*@
-        <input data-toUser="myval" type="text" class="write-message" placeholder="Type your message here"/>
-        <i id="sendMessage" class="icon send fa fa-paper-plane-o clickable" aria-hidden="true"></i>
+        <input data-toUser="myval" type="text" style="margin-left:70px;width:500px" class="write-message" placeholder="Type your message here"/>
+        @*<i id="sendMessage" class="icon send fa fa-paper-plane-o clickable" aria-hidden="true"></i>*@
     </div>
 </section>
 
