--- a/Friendly_Chat/src/Chat.MVC/Views/Shared/_Layout.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Shared/_Layout.cshtml
@@ -7,11 +7,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrendlyChat.az</title>
 
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" type="text/css" href="../assets/css/NotificatioStyle.css">
+
+    <style>
+        .user-list-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin: 10px 0;
+            margin-left: 6px;
+        }
+
+        .user-image {
+            width: 40px;
+            height: 40px;
+            object-fit: contain;
+            margin-right: 10px;
+        }
+
+        .user-name {
+            margin-right: 10px;
+        }
+    </style>
+
     <!--Main Style-->
     <style>
         body {
@@ -535,9 +565,103 @@
         }
     </style>
 
+    <!--The Media Modal Style-->
+    <style>
+
+        /* The Modal (background) */
+        .MediaModal {
+            display: none; /* Hidden by default */
+            position: fixed; /* Stay in place */
+            z-index: 1; /* Sit on top */
+            padding-top: 100px; /* Location of the box */
+            left: 0;
+            top: 0;
+            width: 100%; /* Full width */
+            height:100%;
+            overflow: auto; /* Enable scroll if needed */
+            background-color: rgb(0,0,0); /* Fallback color */
+            background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+        }
+
+        /* Modal Content (image) */
+        .MediaModal-content {
+            margin: auto;
+            display: block;
+            width:80%;
+            object-fit: contain;
+            max-width: 90%;
+        }
+
+        /* Add Animation */
+        .MediaModal-content, #caption1 {
+            -webkit-animation-name: zoom;
+            -webkit-animation-duration: 0.6s;
+            animation-name: zoom;
+            animation-duration: 0.6s;
+        }
+
+        -webkit-keyframes zoom {
+            from
+
+        {
+            -webkit-transform: scale(0)
+        }
+
+        to {
+            -webkit-transform: scale(1)
+        }
+
+        }
+
+        keyframes zoom {
+            from
+
+        {
+            transform: scale(0)
+        }
+
+        to {
+            transform: scale(1)
+        }
+
+        }
+
+        /* The Close Button */
+        .closeModal {
+            position: absolute;
+            top: 15px;
+            right: 35px;
+            color: #f1f1f1;
+            font-size: 40px;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+            .closeModal:hover,
+            .closeModal:focus {
+                color: #bbb;
+                text-decoration: none;
+                cursor: pointer;
+            }
+
+        /* 100% Image Width on Smaller Screens */
+        media only screen and (max-width: 100%) {
+            .MediaModal-content
+
+        {
+            width: 100%;
+        }
+
+        }
+    </style>
+
 </head>
 
 <body>
+    <div id="myMediaModal" class="MediaModal">
+        <span class="closeModal">&times;</span>
+        <img class="MediaModal-content" id="img">
+    </div>
     <div style="margin-top:30px;">
         <div class="container">
             <div class="row">
@@ -547,6 +671,12 @@
                         <a asp-action="Index" asp-controller="Home" class="navitem item" style="color: inherit; text-decoration:none;">
                         <li id="li1" class="item-active">
                             <i class="fa fa-home" aria-hidden="true"></i>
+                        </li>
+                        </a>
+
+                        <a asp-action="Index" asp-controller="Media" class="navitem item" style="color: inherit; text-decoration:none;">
+                        <li id="li1" class="item-active">
+                            <i class="fa-solid fa-photo-film"></i>
                         </li>
                         </a>
 
@@ -579,6 +709,7 @@
         <img class="modal-content" id="img01">
         <div id="caption"></div>
     </div>
+
 
     <script src="~/assets/js/jquery-3.7.0.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.12/signalr.min.js"></script>
@@ -810,6 +941,20 @@
         }
         //End Modal Script------ >
 
+        //The Media Modal Script-------------->
+        var modal = document.getElementById("myMediaModal");
+        var modalImg = document.getElementById("img");
+        var captionText = document.getElementById("caption1");
+        function MediaModal(image) {
+            modal.style.display = "block";
+            modalImg.src = "../assets/media/photos/" + image;
+        };
+        var span = document.getElementsByClassName("closeModal")[0];
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+        //End Media Modal Script-------------->
+
 
     </script>
     <!--End Notification Script-->
@@ -946,6 +1091,5 @@
         });
     </script>
     <!--End Profile Script-->
-
 </body>
 </html>
