--- a/Friendly_Chat/src/Chat.MVC/Views/_ViewImports.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using Chat.MVC.Models.Auth;
 @using Chat.MVC.Models.Home;
 @using Chat.MVC.Models.Profil;
+@using Chat.MVC.Models.Media;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
