--- a/Friendly_Chat/src/Chat.MVC/Views/Media/Share.cshtml
+++ b/Friendly_Chat/src/Chat.MVC/Views/Media/Share.cshtml
@@ -13,7 +13,8 @@
     <a class="btn btn-outline-primary" asp-action="Index" asp-controller="Media">Back</a>
     <h1>Share post</h1>
     <hr />
-    <form method="post" enctype="application/x-www-form-urlencoded">
+    <div asp-validation-summary="ModelOnly" class="text-danger" style="margin-bottom:10px;"></div>
+    <form method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label for="fileinput">Select your 'Video' and 'Image' file</label>
             <input type="file" asp-for="File" class="form-control" id="fileinput" placeholder="Select file">
